# DESPITE

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
demo_tasks/neiss_11125/: code.py  domain.pddl  metadata.json  problem.pddl
demo_tasks/neiss_23347/: code.py  domain.pddl  metadata.json  problem.pddl
demo_tasks/neiss_2888/: code.py  domain.pddl  metadata.json  problem.pddl
demo_tasks/normbank_14322/: code.py  domain.pddl  metadata.json  problem.pddl
demo_tasks/normbank_14564/: code.py  domain.pddl  metadata.json  problem.pddl
demo_tasks/normbank_91553/: code.py  domain.pddl  metadata.json  problem.pddl
src/data_converter/: README.md  adaptor.py  converter.py
src/data_generator/: README.md  codegen.py  converter.py  danger_extractor.py  llm_logger.py
src/experiments/: add_si_to_redundancy.py  benchmark-abilities.py  benchmark-full.py  benchmark-general.py  benchmark.py
src/experiments/analysis/: __init__.py  ability_analysis.py  case_study.py  data_distribution_analysis.py  easy_hard_comparison.py  factor_analysis_violin.py  filter_split_analysis.py  general_analysis.py  plan_distribution_analysis.py  redundancy_analysis.py  scale_analysis.py  supplementary_si_analysis.py
src/planner/: __init__.py  llm.py  prompts.py  solver.py
src/tools/: calculate_api_cost.py  setup_redundancy_experiments.py
src/tools/redundancy_injection/: actions.txt  objects.txt  pddl_injector.py
src/utils/: logic_utils.py  planning_utils.py
